--- a/app/src/main/res/layout/activity_recent_message.xml
+++ b/app/src/main/res/layout/activity_recent_message.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -11,13 +11,14 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recent_message_recyclerList"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="match_parent"/>
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottom_navigation"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
         android:background="#fff"
         app:menu="@menu/bottom_navigation_munu"/>
 
-</LinearLayout>
+</RelativeLayout>
