--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,4 +14,5 @@
     <color name="colorLogin">#5DC868</color>
     <color name="shaofen">#E0E0D0</color>
     <color name="jiaoyu">#ebeee8</color>
+    <color name="ash" >#3e4a53</color>
 </resources>
