--- a/app/src/main/res/layout/activity_recent_message.xml
+++ b/app/src/main/res/layout/activity_recent_message.xml
@@ -6,7 +6,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".recent_message"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:fitsSystemWindows="true">
 
     <include layout="@layout/activity_regular_appbar"
         android:layout_alignParentTop="true"
@@ -25,9 +26,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:background="#fff"
-        app:itemIconTint="@color/purple_200"
-        app:itemTextColor="@color/purple_200"
+        android:background="@color/white"
         app:menu="@menu/bottom_navigation_munu"/>
 
 </RelativeLayout>
