--- a/app/src/main/res/menu/bottom_navigation_munu.xml
+++ b/app/src/main/res/menu/bottom_navigation_munu.xml
@@ -4,11 +4,11 @@
         android:id="@+id/page_1"
         android:enabled="true"
         android:icon="@drawable/baseline_chat_bubble_outline_24"
-        android:title="Page 1"/>
+        android:title="微信"/>
 
     <item
         android:id="@+id/page_2"
         android:enabled="true"
         android:icon="@drawable/outline_account_circle_24"
-        android:title="Page 2"/>
+        android:title="通讯录"/>
 </menu>
