--- a/app/src/main/res/layout/register.xml
+++ b/app/src/main/res/layout/register.xml
@@ -12,7 +12,7 @@
         android:text="返回"
         android:textSize="24sp"
         android:textColor="@color/colorCancel"
-        android:id="@+id/btn_cancel"
+        android:id="@+id/btn_return"
         android:layout_marginLeft="10dp"
         android:layout_marginTop="10dp"/>
 
