--- a/app/src/main/res/layout/register.xml
+++ b/app/src/main/res/layout/register.xml
@@ -131,4 +131,11 @@
         android:layout_gravity="center_horizontal"
         android:gravity="center"/>
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/text_hint"
+        android:layout_marginTop="10dp"
+        android:layout_gravity="center"/>
+
 </LinearLayout>
