--- a/app/src/main/res/layout/activity_chatting.xml
+++ b/app/src/main/res/layout/activity_chatting.xml
@@ -44,18 +44,18 @@
         <androidx.recyclerview.widget.RecyclerView
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="3"
+            android:layout_weight="1"
             android:id="@+id/msg_recycler_view"
             android:background="@color/jiaoyu"/>
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="50dp">
+            android:layout_height="wrap_content">
 
             <EditText
                 android:id="@+id/input_text"
                 android:layout_width="0dp"
-                android:layout_weight="2"
+                android:layout_weight="1"
                 android:textSize="20sp"
                 android:layout_height="48dp"
                 android:layout_marginTop="7dp"
@@ -65,8 +65,8 @@
             <Button
                 android:id="@+id/send"
                 android:background="@drawable/shape"
-                android:layout_width="80dp"
-                android:layout_height="50dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:textSize="20sp"
                 android:text="发送" />
 
